# comp51915-cw1

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  app.sh  gs.cpp  gs.hpp
.github/workflows/: c-cpp.yml  ci.yml
sim/: CMakeLists.txt  gs.cpp  gs.hpp
tests/: CMakeLists.txt  tests.cpp
